# fastapi-template

./: .env.sample  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  settings.py  test_main.py
alembic/: env.py  init.sql
