[project]
name = "fastapi-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.17.2",
    "fastapi>=0.121.2",
    "psycopg2>=2.9.11",
    "pydantic-settings>=2.12.0",
    "uvicorn>=0.38.0",
]

[tool.uv.workspace]
members = [
    "test",
]

[dependency-groups]
dev = [
    "typer>=0.20.0",
]

[tool.pydoclint]
check-type-hint = false
arg-type-hints-in-docstring = false
check-return-types = false
style = "google"
exclude = "venv/|docs/"
