[project]
name = "fastapi-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.17.2",
    "fastapi>=0.121.2",
    "httpx>=0.28.1",
    "psycopg2>=2.9.11",
    "pydantic-settings>=2.12.0",
    "uvicorn>=0.38.0",
]

[tool.uv.workspace]
members = [
    "test",
]

[dependency-groups]
dev = [
    "pytest-dotenv>=0.5.2",
    "typer>=0.20.0",
    "pytest>=9.0.1",
]

[tool.pydoclint]
check-type-hint = false
arg-type-hints-in-docstring = false
check-return-types = false
style = "google"
exclude = "venv/|docs/"

[tool.pytest.ini_options]
env_files = ".env.test"
env_override_existing_values = true
